@@ -265,7 +265,7 @@ my $c_head = <<EOT;
  *
  * SDCC is licensed under the GNU Public license (GPL) v2. Note that
  * this license covers the code to the compiler and other executables,
- * tbut explicitly does not cover any code or objects generated by sdcc.
+ * but explicitly does not cover any code or objects generated by sdcc.
  *
  *
  * For pic device libraries and header files which are derived from
